objects/ssot__DigitalContent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DigitalContentType__c</fullName>
        <label>Digital Content Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Digital Content Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsManaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TemplateId__c</fullName>
        <label>Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1757916100617_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DigitalContent_TemplateId_map_Digita_rel</label>
        <referenceTo>ssot__DigitalContent__dlm</referenceTo>
        <relationshipLabel>DigitalContent_TemplateId_map_Digita_rel</relationshipLabel>
        <relationshipName>rel_1757916100617_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>